# Ollama_Chat_UI

./: .gitignore  README.md  app.py  chat.py  db.py  llm.py  pyproject.toml  requirements.txt  ui.py
backend/app/: dependencies.py  main.py
backend/app/routers/: chats.py
backend/chatui/: asgi.py  settings.py  urls.py  wsgi.py
chat/: models.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chatui/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  main.jsx  reset.css
static/css/: app.css  reset.css
static/js/: app.js
templates/: index.html
