[tool.poetry]
name = "chat-ui"
version = "0.1.0"
description = ""
authors = ["seungwonme <seungwonan.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
langchain = "^0.3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
